--- a/main.html
+++ b/main.html
@@ -8,7 +8,93 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center">HTML Assignment #3</h1>
+	<!--table 1-->
+ <table class="middle" id="table-1">
+        <tr>
+            <td class="center" id="t11">Row 1, Column 1</td>
+            <td id="t12">Row 1, Column 2</td>
+            <td class="right" id="t13">Row 1, Column 3</td>
+        </tr>
+        <tr>
+            <td class="center">Row 2, Column 1</td>
+            <td>Row 2, Column 2</td>
+            <td class="right">Row 2, Column 3</td>
+        </tr>
+        <tr>
+            <td class="center">Row 3, Column 1</td>
+            <td>Row 3, Column 2</td>
+            <td class="right">Row 3, Column 3</td>
+        </tr>
+    </table>
+
+    <!-- Table 2 -->
+    <table class="middle" id="table-2">
+        <tr>
+            <td colspan="6" id="t21">This is a colspan of 6</td>
+        </tr>
+        <tr>
+            <td>Row 2, Column 1</td>
+            <td>Row 2, Column 2</td>
+            <td>Row 2, Column 3</td>
+            <td>Row 2, Column 4</td>
+            <td>Row 2, Column 5</td>
+            <td>Row 2, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 3, Column 1</td>
+            <td>Row 3, Column 2</td>
+            <td>Row 3, Column 3</td>
+            <td>Row 3, Column 4</td>
+            <td>Row 3, Column 5</td>
+            <td>Row 3, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 4, Column 1</td>
+            <td>Row 4, Column 2</td>
+            <td>Row 4, Column 3</td>
+            <td>Row 4, Column 4</td>
+            <td>Row 4, Column 5</td>
+            <td>Row 4, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 5, Column 1</td>
+            <td>Row 5, Column 2</td>
+            <td>Row 5, Column 3</td>
+            <td>Row 5, Column 4</td>
+            <td>Row 5, Column 5</td>
+            <td>Row 5, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 6, Column 1</td>
+            <td>Row 6, Column 2</td>
+            <td>Row 6, Column 3</td>
+            <td>Row 6, Column 4</td>
+            <td>Row 6, Column 5</td>
+            <td>Row 6, Column 6</td>
+        </tr>
+    </table>
+
+    <!-- Table 3 -->
+    <table class="middle" id="table-3">
+        <tr class="green">
+            <td id="t-image" colspan="2"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image"></td>
+        </tr>
+        <tr>
+            <td>Row 2, Column 1</td>
+            <td>Row 2, Column 2</td>
+        </tr>
+        <tr>
+            <td>Row 3, Column 1</td>
+            <td>Row 3, Column 2</td>
+        </tr>
+        <tr class="blue">
+            <td>Row 4, Column 1</td>
+            <td>Row 4, Column 2</td>
+        </tr>
+    </table>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
